# TechLeadAgent

./: Makefile  README.md  pyproject.toml
src/core/: agent.py  config.py
